fix fuentes rotas en contacto, jerarquizo botones y trabajo contraste en botones

--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -73,6 +73,7 @@
 
                 i {
                     width: 30px;
+                    color: var(--text-general);
                 }
             }
         }
@@ -89,6 +90,7 @@
             max-width: 35px;
             text-align: center;
             margin-left: 0rem;
+                                color: var(--text-botones);
         }
     }
 }
